[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Stockstir"
version = "2.1.3"
authors = [
	{ name="PatzEdi", email="patzedigithub@gmail.com" }
]
description = "Instantly and easily gather stock data in real time of any company in any of your Python scripts (V2)"
readme = "README.md"
keywords = ["stocks", "stockmanagement", "stockdata", "stockmarkettool"]
requires-python = ">=3.9"
classifiers = [
		"Programming Language :: Python :: 3",
		"License :: OSI Approved :: MIT License",
		"Operating System :: OS Independent",
]

dependencies = [
  "requests"
]

[tool.hatch.build.targets.wheel]
packages = ["src/stockstir"]

[project.urls]
"Homepage" = "https://github.com/PatzEdi"
"Repository" = "https://github.com/PatzEdi/Stockstir"
"Bug Tracker" = "https://github.com/PatzEdi/Stockstir/issues"